--- a/main.css
+++ b/main.css
@@ -12,6 +12,23 @@ canvas {
 
 }
 
+li{
+	color:#000000;
+	opacity: 0;
+position:absolute;
+	width: 550px;
+	height: 320px;
+	left:32%;
+	top:28%;
+	/* cursor: url('cursor.png'), auto; */
+
+}
+li.pointer {
+cursor: url('cursor.png'), auto;
+opacity:0.5;
+
+}
+
 #about {
 	opacity:0;
 	width:500px;
