--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	background-color: #EAEAEA;;
+	background-color: #EAEAEA;
 	color: #fff;
 	overscroll-behavior: none;
 }
@@ -9,6 +9,10 @@ body {
 canvas {
 	display: block;
 	background-color: #EAEAEA;;
+
+}
+#slogan{
+	position:absolute; left: 80px; top:80px;
 
 }
 
@@ -32,10 +36,10 @@ opacity:0.5;
 #about {
 	opacity:0;
 	width:500px;
-	height:500px;
+	height:300px;
 	position:absolute;
-	bottom: 150px;
-	right:200px;
+	bottom:35px;
+	right:120px;
 	z-index:10;
 }
 .social-link {
@@ -80,4 +84,33 @@ a, button, input, select {
 	-ms-user-select: none;
 	user-select: none;
 	z-index: 2 !important; /* TODO Solve this in HTML */
+}
+
+
+#c {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+@media only screen and (max-width: 600px) {
+
+	#icon {
+    width:20px;
+  }
+	#slogan {
+		left:5%;
+		width: 40%;
+	}
+	.about-animation {
+		position:absolute;
+		bottom:35px;
+		width:80%;
+		right:1%;
+		opacity:1;
+		mix-blend-mode: darken;
+	}
+	#logo3d{
+		width:50%;
+	}
 }
