--- a/main.css
+++ b/main.css
@@ -4,10 +4,21 @@ body {
 	color: #fff;
 }
 
+div.3d-logo{
+
+	width: 100%;
+	height: 100%;
+}
+
 
 canvas {
 	display: block;
 	background-color: #EAEAEA;;
+	/* max-width: 500px;
+	min-width: 200px;
+	width: 100%;
+	height: auto; */
+	margin: auto;
 
 }
 #slogan{
