--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	/* background-color: #DFDFDA; */
-	background-color: red;
+	background-color: #DFDFDA;
+	/* background-color: red; */
 
 	color: #fff;
 }
