--- a/main.css
+++ b/main.css
@@ -105,7 +105,6 @@ opacity:0.5;
 }
 
 
-
 @media only screen
   and (min-device-width: 375px)
   and (max-device-width: 812px)
@@ -127,5 +126,15 @@ opacity:0.5;
 				display:none
 				bottom:-1000px;
 			}
+
+}
+
+@media only screen and (max-width: 1000px) {
+
+	#slogan {
+		left:3%;
+		top:7%;
+		width: 130px;
+	}
 
 }
