--- a/main.css
+++ b/main.css
@@ -13,15 +13,15 @@ body {
 } */
 
 
-/* canvas {
+ canvas {
 	display: block;
 	background-color: #EAEAEA;;
 	/* max-width: 500px;
 	min-width: 200px;
 	width: 100%;
 	height: auto; */
-	/* margin: auto; */
-/* }  */
+	 margin: auto; 
+}  
 
 #slogan{
 	position:absolute; left: 80px; top:80px;
