--- a/main.css
+++ b/main.css
@@ -127,4 +127,17 @@ opacity:0.5;
 		bottom:-1000px;
 	}
 
+#ig {
+	top:105px;
+	right:50px;
+}
+#in {
+	top:175px;
+	right:50px;
+}
+#peace {
+	top:240px;
+	right:50px;
+}
+
 }
